popular-item overflow fixed

--- a/Ogrenciler/Cenk/ders-06/yilbasi-odev1/index.css
+++ b/Ogrenciler/Cenk/ders-06/yilbasi-odev1/index.css
@@ -633,6 +633,10 @@ p {
 .fa-arrow-right {
   font-size: 20px;
 }
+.popular-items{
+  margin-top: 74px;
+  margin-bottom: 86px;
+}
 .popular-items .container {
   display: flex;
   flex-direction: column;
@@ -675,9 +679,6 @@ p {
 }
 .popular-item-card img {
   width: 100%;
-}
-.popular-items {
-  height: 1400px;
 }
 .popular-item-text {
   padding: 25px 20px;
